# terminal-galaxy

./: README.md
dwm/: CMakeLists.txt  config.def.h  config.h  dwm.c
eduterm/: Makefile
st/: CMakeLists.txt  x.c
xiate/: BUGS  CHANGES  CMakeLists.txt  LICENSE  Makefile  README  config.example.ini  defaults.h  terminal.c  xiate.1
